@@ -1,0 +1,3 @@
+The Log framework provides an abstracted logging system for PHP. It supports
+logging to console, file, syslog, SQL, mail, and mcal targets. It also
+provides a subject - observer mechanism.
