@@ -1,0 +1,11 @@
+# $NetBSD: Makefile,v 1.1.1.1 2003/12/17 19:27:29 jdolecek Exp $
+
+DISTNAME=	Log-1.7.0
+CATEGORIES=	sysutils
+
+MAINTAINER=	tech-pkg@NetBSD.org
+HOMEPAGE= 	http://www.csh.rit.edu/~jon/projects/pear_log/
+COMMENT=	PHP Log framework provides an abstracted logging system
+
+.include "../../www/php4/pear.mk"
+.include "../../mk/bsd.pkg.mk"
