@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4164 2003/12/17 19:25:08 jdolecek Exp $
+$NetBSD: CHANGES,v 1.4165 2003/12/17 19:30:12 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -5215,3 +5215,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Added pear-Date-1.3 [jdolecek 2003-12-17]
 	Added pear-HTML_Common-1.2.1 [jdolecek 2003-12-17]
 	Added pear-HTML_Select-1.2 [jdolecek 2003-12-17]
+	Added pear-Log-1.7.0 [jdolecek 2003-12-17]
